# bunq_hackathon

./: .gitignore  pyproject.toml  run.ps1  run.sh
bunq_hackathon/: __init__.py
bunq_hackathon/static/css/: hackathon.css
bunq_hackathon/templates/: challenge.html  challenge_request.html  challenge_results.html  create_challenge.html  dashboard.html  error.html  index.html
bunq_hackathon/templates/challenges/: jumpin.html  poppin.html  rollin.html  rps.html  stopin.html
bunq_hackathon/templates/components/: base.html  html_head.html
tests/: test_bunq_hackathon.py
