[tool.poetry]
name = "bunq_hackathon"
version = "0.1.0"
description = ""
authors = ["Evrim Öztamur <evrim@ccount.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
bunq_sdk = "^1.10"
python-dateutil = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
